# debates-app

./: .env.dist  .gitignore  .gitmodules  Dockerfile  README.md  docker-compose.compose.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  justfile  pyproject.toml
backend/: .gitignore  README.md  pyproject.toml
backend/scripts/: load-data.sh  s3-download.sh
backend/src/: debates.py
backend/src/dataloader/: api.py  file.py  merge.py  solr.py  yml_parser.py
docs/: Dockerfile  README.md  mkdocs.yml  pyproject.toml
docs/docs/: api.md  architecture.md  dataloader.md  index.md  openapi.json  processing.md  roadmap.md  webui.md
docs/docs/install/: compose.md  development.md  options.md
docs/includes/: glossary.md
docs/src/: processing.md
docs/src/install/: server.md
nginx/: nginx.compose.conf  nginx.conf  nginx.dev.conf
proxy/: Dockerfile  nginx.conf
schema/: managed-schema.xml
scripts/: load-data.sh
solr/: Dockerfile  README.md
solr/schema/: managed-schema.xml
src/: debates.py  main.py  mongo.py  process.py
src/dataloader/: api.py  file.py  mongo_output.py  mongodb.py  parser.py  s3.py  schema_metadata_validator.json  schema_mongo_validator.json  schema_yml_validator.json  schema_yml_validator.yml  solr.py  srt_parser.py
src/debates_dataloader/: __init__.py
